--- a/source/template/blog.jade
+++ b/source/template/blog.jade
@@ -3,5 +3,6 @@ html
  include common/_head
  body
   include common/_header
+  include common/triangle-main
   include common/_blog_content
   include common/_footer
