--- a/source/template/common/_blog_content.jade
+++ b/source/template/common/_blog_content.jade
@@ -1,6 +1,7 @@
 .blog-container
             aside.aside
-              ul.aside__list
+              .wrapper__list
+               ul.aside__list
                     li.aside__list-item
                        a.aside__item-link(href="#")
                          .item__link-text Самое важное в SASS
