--- a/source/style/common/fonts.scss
+++ b/source/style/common/fonts.scss
@@ -1,10 +1,8 @@
 @font-face {
     font-family: 'robotobold';
-    src: url('..fonts/Roboto-Bold-webfont.eot');
-    src: url('..fonts/Roboto-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('..fonts/Roboto-Bold-webfont.woff') format('woff'),
-         url('..fonts/Roboto-Bold-webfont.ttf') format('truetype'),
-         url('..fonts/Roboto-Bold-webfont.svg#robotobold') format('svg');
+    src: url('../fonts/Roboto-Bold-webfont.woff') format('woff');
+    src: url('../fonts/Roboto-Bold-webfont.ttf') format('truetype'),
+         url('../fonts/Roboto-Bold-webfont.svg#robotobold') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -19,11 +17,8 @@
 
 @font-face {
     font-family: 'robotomedium';
-    src: url('../fonts/Roboto-Medium-webfont.eot');
-    src: url('../fonts/Roboto-Medium-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Roboto-Medium-webfont.woff') format('woff'),
-         url('../fonts/Roboto-Medium-webfont.ttf') format('truetype'),
-         url('../fonts/Roboto-Medium-webfont.svg#robotomedium') format('svg');
+    src: url('../fonts/Roboto-Medium-webfont.ttf') format('truetype');
+    src:  url('../fonts/Roboto-Medium-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -31,21 +26,16 @@
 
 @font-face {
     font-family: 'robotoregular';
-    src: url('../fonts/Roboto-Regular-webfont.eot');
-    src: url('../fonts/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Roboto-Regular-webfont.woff') format('woff'),
-         url('../fonts/Roboto-Regular-webfont.ttf') format('truetype'),
-         url('../fonts/Roboto-Regular-webfont.svg#robotoregular') format('svg');
+    src: url('../fonts/Roboto-Regular-webfont.woff') format('woff');
+    src: url('../fonts/Roboto-Regular-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 
 }
 @font-face {
     font-family: 'robotolight';
-    src: url('../fonts/Roboto-Light-webfont.eot');
-    src: url('../fonts/Roboto-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Roboto-Light-webfont.woff') format('woff'),
-         url('../fonts/Roboto-Light-webfont.ttf') format('truetype'),
+    src: url('../fonts/Roboto-Light-webfont.ttf') format('truetype');
+    src: url('../fonts/Roboto-Light-webfont.woff') format('woff'),
          url('../fonts/Roboto-Light-webfont.svg#robotolight') format('svg');
     font-weight: normal;
     font-style: normal;
