--- a/source/style/common/header.scss
+++ b/source/style/common/header.scss
@@ -94,6 +94,23 @@
     }
 }
 
+.menu_burger {
+    width: 45px;
+    height: 6px;
+    border-radius: 3px;
+    background:#fff;
+margin: 0 0 10px 0;
+
+& + .active {
+    transition: transform ease-in .5s, opacity ease-in .2s;
+    transform: rotate(-45deg) translateY(-5px);
+}
+    &:first-child {
+        
+    }
+  
+}
+
 
 .nav {
     position: fixed;
@@ -168,10 +185,27 @@
 }
 
 .nav__link {
+    position: relative;
     color: #fff;
     text-decoration: none;
     font-family: 'BERNIERRegular-Regular',sans-serif;
-  
+  &:before &:after,  {
+        position: absolute;
+        content:'';
+        width: 22px;
+        height: 5px;
+        background: rgb(84, 230, 211);
+        top: 36px;
+        
+    
+  }
+  &:hover,&:before {
+    left: -41px;
+    display: visible;
+  }
+  &:after {
+    right: -33px;
+  }
 }
 
 .nav__btn svg {
@@ -210,7 +244,7 @@
     position: relative;
     height: 100vh;
     min-height: 650px;
-    background: url("../img/good_back.jpg");
+    // background: url("../img/good_back.jpg");
     background-size: cover;
     display: -webkit-box;
     display: -webkit-flex;
@@ -224,8 +258,36 @@
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
+    overflow: hidden;
 }
 
+.bg_image {
+
+position: absolute;
+top: 0;
+right: 0;
+left: 0;
+height: 1276px;
+min-width: 1000px;
+& img {
+    display:block;
+    max-width: 100%;
+ }
+}
+
+.author__section-img {
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    img {
+        width: 100%;
+        display: inline-block;
+    }
+}
 
 .triangle {
   
@@ -237,45 +299,36 @@
     fill: #fff;
 }
 
-.author__section {
-	text-align: center;
-	background: url(../img/blog_header.png) center bottom no-repeat;
-    width: 400px;
-
+#about_header {
+    opacity: 0.5;
 }
+
 
 .author__section_portfolio {
     text-align: center;
-    background: url(../img/portfolio_header.png) top no-repeat;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    // background: url(../img/portfolio_header.png) top no-repeat;
     width: 100%;
-    & h1 {
-        font-family: 'BERNIERRegular-Regular';
-    font-size: 63px;
-    color:#fff;
-    }
+   
 }
 
-.author__section h1 {
-    font-family: 'BERNIERRegular-Regular';
-    font-size: 63px;
-    color:#fff;
-    margin: 0;
-    
-}
 
 .author__text  {
-    font-family: 'robotoregular';
-    font-size: 20px;
+    font-family: 20px/1 'robotoregular',sans-serif,Arial;
     color:#fff;
 
 }
 
 
 .author__header {
-	font-family: 'robotomedium', sans-serif;
-	font-size: 35px;
+     font: 63px/1'BERNIERRegular-Regular',Helvetica,Arial;
+    color:#fff;
+    margin: 0;
+    
 }
 
-.blog__header--background {
-
-}
