--- a/source/style/pages/blog.scss
+++ b/source/style/pages/blog.scss
@@ -11,10 +11,25 @@
 	align-items: flex-start;
 	width: 100%;
 }
+
+.wrapper__list {
+	height: 1px;
+	position: relative;
+}
 .aside {
-	margin: 65px 0 0 65px;
- 	width: 290px;
+	// margin: 65px 0 0 65px;
  	text-align: center;
+ 	float: left;
+ 	width: 30%;
+ 	// height: 1px;
+}
+.aside__list {
+	position: absolute;
+	top: 0;
+	right: 0;
+	left: 0;
+	
+
 }
 .aside__item-link {
 	display: block;
@@ -26,6 +41,7 @@
 .aside__list-item {
 	text-align: right;
 	width: 287px;
+	display: block;
 }
 .aside__item-link:hover {
 	border-right: 3px solid #00bfa5;
@@ -44,8 +60,11 @@
 	font-weight: 500;
 }
 .article {
-	margin: 65px 0 0 65px;
-	width: 950px;
+
+	width: 70%;
+	float: left;
+	padding-right: 150px;
+
 }
 .article__list-item {
 	position: relative;
@@ -76,7 +95,7 @@
 }
 .article__date {
 	font-family: 'robotoregular';
-	color: rgba(78, 136, 57, 0.7);
+	color:#58d5c4;
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 41px;
@@ -89,3 +108,54 @@
 .snippet__img {
 	width: 100%
 }
+
+@media (min-width: 1200) and (max-width: 1799px) {
+}
+
+@media (min-width: 768px) and (max-width: 1199px) {
+
+.aside {
+  position: fixed;
+  top: 40px;
+  left: 0;
+  -webkit-transition-duration: 0.3s;
+  -moz-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  &.active .aside__list {
+  	height: 100vh;
+  	background-color: #58d5c4;
+  	color: #fff;
+  	left: 250px;
+
+  }
+
+}
+.aside__list {
+  position: fixed;
+  top: 40px;
+  left: -250px;
+  -webkit-transition-duration: 0.3s;
+  -moz-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+   &.active {
+  	height: 100vh;
+  	background-color: #58d5c4;
+  	color: #fff;
+  	left: 250px;
+
+  }
+}
+
+.aside__list :hover {
+  left: 250px;
+}
+.aside .aside__list.active {
+  left: 0;
+}
+
+}
+// @media (min-width: 320px) and (max-width: 767px) {
+
+// }
